--- a/baby-name-finder/package.json
+++ b/baby-name-finder/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
+    "firebase": "^11.10.0",
     "lucide-react": "^0.522.0",
     "postcss": "^8.5.6",
     "react": "^19.1.0",
